added solar model

--- a/conference_paper.tex
+++ b/conference_paper.tex
@@ -62,12 +62,12 @@ pratik.harsh@durham.ac.uk}
 }
 \maketitle
 \begin{abstract}
-  Increased photovoltaic (PV) penetration in the low-voltage residential sector highlights the intrinsic problems with Silicon PV (Si-PV) in seasonal power output fluctuations.
-  Exploring the potential performance of alternative PV materials, such as Perovskite and Organic in low-light conditions could significantly enhance residential energy systems. 
-  In this research, a novel material model is presented to evaluate the performance of Organic PV materials across various temperatures and light conditions. 
-  The findings indicate that Low-Light Enhanced PV (LLE-PV) reduces grid energy dependency by 66.37\% in autumn and 22.85\% in winter.
-  Consequently, this boosts the self-sufficiency ratios to 0.83 in autumn and 0.39 in winter, in contrast to Si-PV's ratios of 0.59 and 0.21, respectively.
-  Additionally, it enabled the transfer of excess energy to the grid during autumn, period significantly affected by solar irradiance variability, an achievement unattainable with Silicon PV.
+  % Increased photovoltaic (PV) penetration in the low-voltage residential sector highlights the intrinsic problems with Silicon PV (Si-PV) in seasonal power output fluctuations.
+  % Exploring the potential performance of alternative PV materials, such as Perovskite and Organic in low-light conditions could significantly enhance residential energy systems. 
+  % In this research, a novel material model is presented to evaluate the performance of Organic PV materials across various temperatures and light conditions. 
+  % The findings indicate that Low-Light Enhanced PV (LLE-PV) reduces grid energy dependency by 66.37\% in autumn and 22.85\% in winter.
+  % Consequently, this boosts the self-sufficiency ratios to 0.83 in autumn and 0.39 in winter, in contrast to Si-PV's ratios of 0.59 and 0.21, respectively.
+  % Additionally, it enabled the transfer of excess energy to the grid during autumn, period significantly affected by solar irradiance variability, an achievement unattainable with Silicon PV.
 \end{abstract}
 
 \begin{IEEEkeywords}
